--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
       <version>${gwtVersion}</version>
       <scope>provided</scope>
     </dependency>
-    <dependency>
+<!--    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.7</version>
@@ -51,7 +51,7 @@
       <version>1.0.0.GA</version>
       <classifier>sources</classifier>
       <scope>test</scope>
-    </dependency>
+    </dependency>-->
   </dependencies>
 
   <build>
@@ -69,9 +69,9 @@
           <execution>
             <goals>
               <goal>compile</goal>
-              <goal>test</goal>
+              <!--<goal>test</goal>-->
               <goal>i18n</goal>
-              <goal>generateAsync</goal>
+              <!--<goal>generateAsync</goal>-->
             </goals>
           </execution>
         </executions>
@@ -106,8 +106,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.3.2</version>
         <configuration>
-          <source>1.5</source>
-          <target>1.5</target>
+          <source>1.7</source>
+          <target>1.7</target>
         </configuration>
       </plugin>
     </plugins>
